# presort

./: .gitignore  Cargo.toml  README.md  index.html
benches/: lib.rs
doc/: Makefile  bench_additions.sh  bench_all.sh  bench_data_batches.sh  bench_data_change.sh  bench_data_edit.sh  bench_data_incr.sh  bench_removals.sh  bench_resort_chance.sh  bench_shape_chance.sh  bench_shape_edit.sh  chance_bench.sh  chance_plot.sh  more_plots.sh  paper.bib  paper.tex  plots.tex
examples/: inc_tests.rs  presort_bench.rs
examples/inc_tree/: mod.rs  sortvec.rs
scripts/: chance_bench.sh  chance_plot.sh
src/: inc_tree.rs  lib.rs  merge_vec.rs  permuted_vec.rs  presort.rs  presorted_vec.rs  sortvec.rs
tests/: lib.rs
