[package]
name = "presort"
version = "0.0.1"
authors = ["ajeffrey@mozilla.com"]
license = "MPL-2.0"

[dependencies]
serde = { version = "0.7", optional = true }
serde_json = { version = "0.7", optional = true }
heapsize = { version = "0.3", optional = true }

[dev-dependencies]
rand = "0.3"
time = "0.1"
clap = "2"
streaming-stats = "0.1"
